# GifRecorder

./: .gitignore  CMakeLists.txt  GifRecorder.pro  README.md  editdialog.cpp  editdialog.h  editdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingsdialog.ui  silentwidget.cpp  silentwidget.h
3rd/magick/lib/: CORE_RL_MagickCore_.lib
